--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@ import FootballIcon from '../assets/football-icon.svg';
 	<div class="flex justify-between h-full max-w-screen-xl mx-auto px-4">
 		<div class="flex items-center">
 			<img src={FootballIcon.src} alt="Football's icon" class="mr-2" />
-			<h1 class="text-xl">Football Club Crest</h1>
+			<h1 class="text-xl">Football Crest</h1>
 		</div>
 		<div class="flex items-center">
 			<p class="text-slate-500 text-xs mr-1">by</p>
