ADD: download on click and quick eager/lazy images optimization

--- a/src/components/Crest.astro
+++ b/src/components/Crest.astro
@@ -6,19 +6,27 @@ interface Props {
 	abbr: string;
 	name: string;
 	imagePath: string;
+	imageLoading: "eager" | "lazy";
 }
 
-const { abbr, name, imagePath } = Astro.props;
+const { abbr, name, imagePath, imageLoading } = Astro.props;
 const images = import.meta.glob<{ default: ImageMetadata }>('/src/assets/crests/*.svg')
-if (!images[imagePath]) throw new Error(`"${imagePath}" doesn't exist in folder: "src/assets/*.svg"`);
+let image;
+
+if (images[imagePath]) {
+  image = await images[imagePath]();
+} else {
+  throw new Error(`"${imagePath}" doesn't exist in folder: "src/assets/*.svg"`);
+}
+
 ---
 
-<div class="flex flex-col rounded-lg items-center border border-slate-900 py-12 px-4 hover:bg-slate-900 hover:border-slate-800 transition-colors cursor-pointer">
-	<Image src={images[imagePath]()} alt={`${name}'s crest'`} loading="lazy" class="h-6 w-6 mb-2 border border-dotted border-violet-700" />
+<a href={image.default.src} download class="flex flex-col rounded-lg items-center border border-slate-900 py-12 px-4 hover:bg-slate-900 hover:border-slate-800 transition-colors">
+	<Image src={image.default} alt={`${name}'s crest'`} loading={imageLoading} class="h-6 w-6 mb-2 border border-dotted border-violet-700" />
 	<h2 class="font-bold uppercase text-sm select-all">
 		{abbr}
 	</h2>
 	<p class="inline-block w-full text-slate-500 text-xs truncate text-center select-all">
 		{name}
 	</p>
-</div>
+</a>
