--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,13 +9,13 @@ import uelClubs from '../assets/uel-clubs.json';
 	<h2 class="text-lg mb-2">Champions League</h2>
 	<div class="grid grid-cols-3 gap-4 sm:grid-cols-5 md:grid-cols-6 lg:grid-cols-7 xl:grid-cols-8 mb-6">
 		{uclClubs.map((club) => {
-			return <Crest abbr={club.abbr} name={club.name} imagePath={club.imagePath} />
+			return <Crest abbr={club.abbr} name={club.name} imagePath={club.imagePath} imageLoading="eager" />
 		})}
 	</div>
 	<h2 class="text-lg mb-2">Europa League</h2>
 	<div class="grid grid-cols-3 gap-4 sm:grid-cols-5 md:grid-cols-6 lg:grid-cols-7 xl:grid-cols-8">
 		{uelClubs.map((club) => {
-			return <Crest abbr={club.abbr} name={club.name} imagePath={club.imagePath} />
+			return <Crest abbr={club.abbr} name={club.name} imagePath={club.imagePath} imageLoading="lazy" />
 		})}
 	</div>
 </Layout>
