ADD: favicon, description and feature callout

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,9 @@ import uelClubs from '../assets/uel-clubs.json';
 ---
 
 <Layout title="Football Crest">
+	<div class="bg-slate-900 rounded-lg p-4 mb-6">
+		Click to download the <span class="italic">SVG</span> of your club crests
+	</div>
 	<h2 class="text-lg mb-2">Champions League</h2>
 	<div class="grid grid-cols-3 gap-4 sm:grid-cols-5 md:grid-cols-6 lg:grid-cols-7 xl:grid-cols-8 mb-6">
 		{uclClubs.map((club) => {
