--- a/src/components/Crest.astro
+++ b/src/components/Crest.astro
@@ -22,7 +22,7 @@ if (images[imagePath]) {
 ---
 
 <a href={image.default.src} download class="flex flex-col rounded-lg items-center border border-slate-900 py-12 px-4 hover:bg-slate-900 hover:border-slate-800 transition-colors">
-	<Image src={image.default} alt={`${name}'s crest'`} loading={imageLoading} class="h-6 w-6 mb-2 border border-dotted border-violet-700" />
+	<Image src={image.default} alt={`${name}'s crest'`} loading={imageLoading} class="h-6 w-6 mb-2 border border-dotted border-violet-700 object-contain" />
 	<h2 class="font-bold uppercase text-sm select-all">
 		{abbr}
 	</h2>
