FIX: nvmrv and error text

--- a/src/components/Crest.astro
+++ b/src/components/Crest.astro
@@ -16,7 +16,7 @@ let image;
 if (images[imagePath]) {
   image = await images[imagePath]();
 } else {
-  throw new Error(`"${imagePath}" doesn't exist in folder: "src/assets/*.svg"`);
+  throw new Error(`"${imagePath}" doesn't exist in folder: "src/assets/crests/*.svg"`);
 }
 
 ---
