--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@ import footballIcon from '../assets/football-icon.svg';
 <header class="fixed top-0 right-0 left-0 h-20 backdrop-blur-md">
 	<div class="flex justify-between h-full max-w-screen-xl mx-auto px-4">
 		<div class="flex items-center">
-			<img src={footballIcon.src} alt="Football's icon" class="mr-2" />
+			<img src={footballIcon.src} alt="Football's icon" class="h-8 w-8 mr-2" />
 			<h1 class="text-xl font-bold">Football Crest</h1>
 		</div>
 		<div class="flex items-center">
