--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+import Navigation from '../components/Navigation.astro';
 
 interface Props {
 	title: string;
@@ -21,6 +22,7 @@ const { title } = Astro.props;
 	<body class="bg-slate-950 text-white font-mono pt-20 selection:bg-violet-700 mb-6">
 		<Header />
 		<main class="max-w-screen-xl mx-auto px-4">
+			<Navigation />
 			<slot />
 		</main>
 	</body>
