--- a/src/components/GridCrests.astro
+++ b/src/components/GridCrests.astro
@@ -1,5 +1,5 @@
 ---
-import Crest from '../components/Crest.astro';
+import Crest from './Crest.astro';
 
 import type { ImageMetadata } from 'astro';
 
