--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,37 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import Grid from '../components/Grid.astro';
+import GridCrests from '../components/GridCrests.astro';
+import Header from '../components/Header.astro';
+import Navigation from '../components/Navigation.astro';
 
-import uclClubs from '../assets/ucl-clubs.json';
-import uelClubs from '../assets/uel-clubs.json';
+import data from '../data.json';
 
 import uclLogo from '../assets/ucl-logo.svg';
 import uelLogo from '../assets/uel-logo.svg';
+
 ---
 
-<Layout title="Football Crest">
-	<section>
-		<div id="ucl" class="h-20 -mt-20 pointer-events-none"></div>
-		<Grid championshipName="Champions League" championshipLogo={uclLogo} clubsData={uclClubs} imageLoading='eager' />
-	</section>
-	<section>
-		<div id="uel" class="h-20 -mt-20 pointer-events-none"></div>
-		<Grid championshipName="Europa League" championshipLogo={uelLogo} clubsData={uelClubs} imageLoading='lazy' />
-	</section>
-</Layout>
+<!doctype html>
+<html lang="en" class="scroll-smooth">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="description" content="List of football club badges from the European championships for the 2023/24 season" />
+		<meta name="viewport" content="width=device-width" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<meta name="generator" content={Astro.generator} />
+		<title>Football Crest</title>
+	</head>
+	<body class="bg-slate-950 text-white font-mono pt-20 selection:bg-violet-700 mb-6">
+		<Header />
+		<main class="max-w-screen-xl mx-auto px-4">
+			<Navigation />
+			<section>
+				<div id="ucl" class="h-20 -mt-20 pointer-events-none"></div>
+				<GridCrests championshipName="Champions League" championshipLogo={uclLogo} clubsData={data.ucl} imageLoading='eager' />
+			</section>
+			<section>
+				<div id="uel" class="h-20 -mt-20 pointer-events-none"></div>
+				<GridCrests championshipName="Europa League" championshipLogo={uelLogo} clubsData={data.uel} imageLoading='lazy' />
+			</section>
+		</main>
+	</body>
+</html>
