--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,19 +1,19 @@
 ---
-import lbLogotype from '../assets/lb-logotype.svg';
-import footballIcon from '../assets/football-icon.svg';
+import lbLogotype from "../assets/lb-logotype.svg";
+import footballIcon from "../assets/football-icon.svg";
 ---
 
-<header class="fixed top-0 right-0 left-0 h-20 backdrop-blur-md">
-	<div class="flex justify-between h-full max-w-screen-xl mx-auto px-4">
-		<div class="flex items-center">
-			<img src={footballIcon.src} alt="Football's icon" class="h-8 w-8 mr-2" />
-			<h1 class="text-xl font-bold">Football Crest</h1>
-		</div>
-		<div class="flex items-center">
-			<p class="text-slate-500 text-xs mr-1">by</p>
-			<a href="https://lucasboucher.fr" target="_blank">
-				<img src={lbLogotype.src} class="h-4 w-4" alt="Lucas Boucher's website" />
-			</a>
-		</div>
-	</div>
+<header class="fixed left-0 right-0 top-0 h-20 backdrop-blur-md">
+  <div class="mx-auto flex h-full max-w-screen-xl justify-between px-4">
+    <div class="flex items-center">
+      <img src={footballIcon.src} alt="Football's icon" class="mr-2 h-8 w-8" />
+      <h1 class="text-xl font-bold">Football Crest</h1>
+    </div>
+    <div class="flex items-center">
+      <p class="mr-1 text-xs text-slate-500">by</p>
+      <a href="https://lucasboucher.fr" target="_blank">
+        <img src={lbLogotype.src} class="h-4 w-4" alt="Lucas Boucher's website" />
+      </a>
+    </div>
+  </div>
 </header>
