--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,9 +1,17 @@
 <nav class="mb-6">
-    <div class="flex gap-3 mb-4">
-        <a href="#ucl" class="inline-block rounded-full bg-slate-50 text-black px-3 py-1 hover:bg-slate-200 cursor-pointer text-sm">Champions League</a>
-        <a href="#uel" class="inline-block rounded-full bg-slate-50 text-black px-3 py-1 hover:bg-slate-200 cursor-pointer text-sm">Europa League</a>
-    </div>
-    <div class="bg-slate-900 rounded-lg p-4">
-        Click to download your club crest <span class="italic">SVG</span>
-    </div>
+  <div class="mb-4 flex gap-3">
+    <a
+      href="#ucl"
+      class="inline-block cursor-pointer rounded-full bg-slate-50 px-3 py-1 text-sm text-black hover:bg-slate-200"
+      >Champions League</a
+    >
+    <a
+      href="#uel"
+      class="inline-block cursor-pointer rounded-full bg-slate-50 px-3 py-1 text-sm text-black hover:bg-slate-200"
+      >Europa League</a
+    >
+  </div>
+  <div class="rounded-lg bg-slate-900 p-4">
+    Click to download your club crest <span class="italic">SVG</span>
+  </div>
 </nav>
