--- a/src/components/global/Layout.astro
+++ b/src/components/global/Layout.astro
@@ -33,6 +33,7 @@ import Header from "./Header.astro";
     <meta name="msapplication-TileImage" content="/favicons/favicon-144x144.png" />
     <meta name="msapplication-config" content="/browserconfig.xml" />
     <meta name="theme-color" content="#020617" />
+    <link rel="sitemap" href="/sitemap-index.xml" />
   </head>
   <body class="mb-6 bg-slate-950 pt-20 font-mono text-white selection:bg-violet-700">
     <Header />
