UPDATE: Directory based approach, delete img/svg assets folder layer and import aliases

--- a/src/components/Crest/Crest.astro
+++ b/src/components/Crest/Crest.astro
@@ -10,13 +10,13 @@ interface Props {
 }
 
 const { abbr, name, imagePath, imageLoading } = Astro.props;
-const images = import.meta.glob<{ default: ImageMetadata }>("/src/assets/svg/crests/*.svg");
+const images = import.meta.glob<{ default: ImageMetadata }>("@crests/*.svg");
 let image;
 
 if (images[imagePath]) {
   image = await images[imagePath]();
 } else {
-  throw new Error(`"${imagePath}" doesn't exist in folder: "src/assets/svg/crests/*.svg"`);
+  throw new Error(`"${imagePath}" doesn't exist in folder: "src/assets/crests/*.svg"`);
 }
 ---
 
