--- a/src/components/GridCrests/GridCrests.astro
+++ b/src/components/GridCrests/GridCrests.astro
@@ -1,7 +1,6 @@
 ---
-import Crest from "./Crest.astro";
-
 import type { ImageMetadata } from "astro";
+import { Crest } from "@components/Crest";
 
 interface ClubData {
   abbr: string;
