--- a/src/components/globals/Header/Header.astro
+++ b/src/components/globals/Header/Header.astro
@@ -1,6 +1,6 @@
 ---
-import lbLogotype from "../../assets/svg/lb-logotype.svg";
-import footballIcon from "../../assets/svg/football-icon.svg";
+import lbLogotype from "@assets/lb-logotype.svg";
+import footballIcon from "@assets/football-icon.svg";
 ---
 
 <header class="fixed left-0 right-0 top-0 h-20 backdrop-blur-md">
