--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import Layout from "../components/global/Layout.astro";
-import Navigation from "../components/Navigation.astro";
-import GridCrests from "../components/GridCrests.astro";
+import { Layout } from "@globals";
+import { Navigation } from "@components/Navigation";
+import { GridCrests } from "@components/GridCrests";
 
 import data from "../data.json";
 
-import uclLogo from "../assets/svg/ucl-logo.svg";
-import uelLogo from "../assets/svg/uel-logo.svg";
+import uclLogo from "@assets/ucl-logo.svg";
+import uelLogo from "@assets/uel-logo.svg";
 ---
 
 <Layout>
